[package]
name = "day11"
version = "0.1.0"
authors = ["Robert Lasch <robert.lasch0@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intcode = { path = "../intcode" }

[[bin]]
name = "day11"
path = "main.rs"
